[gdb/symtab] Handle DW_AT_string_length with location list

Consider a fortran routine where a string variable s is modified:
...
subroutine f(s)
  character*(*) s
  print *, s
  s(1:3) = 'oof'
  print *, s
end subroutine f
...

When compiling with optimization level -O1 and printing the type of
variable s we get:
...
$ gdb -q -batch outputs/gdb.opt/fortran-string/fortran-string \
  -ex "b f" \
  -ex run \
  -ex "ptype s"
Breakpoint 1 at 0x4006f7: file fortran-string.f90, line 21.

Breakpoint 1, f (s=..., _s=_s@entry=3) at fortran-string.f90:21
21      subroutine f(s)
type = character*1
...
while with -O0 we have instead:
...
type = character (3)
...

The problem is that the type of s is:
...
 <1><2d6>: Abbrev Number: 21 (DW_TAG_string_type)
    <2d7>   DW_AT_string_length: 0xbf (location list)
    <2db>   DW_AT_byte_size   : 4
...
where the DW_AT_string_length is a location list, a case that is not handled
by attr_to_dynamic_prop.

Fix this by handling attr->form_is_section_offset () in attr_to_dynamic_prop.

Tested on x86_64-linux.

The test-case is based on gdb.opt/fortran-string.exp from
https://src.fedoraproject.org/rpms/gdb/raw/f32/f/gdb-archer-vla-tests.patch .
I've updated the copyrights to stretch to 2021.

[ I've tried to create a dwarf assembly test-case for this, but didn't
manage. ]

Co-Authored-By: Jan Kratochvil <jan.kratochvil@redhat.com>

Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=26910